--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </nav>
 
 <center><h3>   Welcome to From The Heart, your trusted destination for exploring the depths of love through our unique Love Meter. At From The Heart, we believe 
- that love is a universal language that transcends boundaries and connects souls in profound ways.   
+ that love is a universal language that transcends boundaries and connects souls in profound ways.</h3>   
  
- Our Love Meter is more than just a tool—it's a beacon of insight and understanding that helps you gauge the strength and compatibility of your 
+ <h3>Our Love Meter is more than just a tool—it's a beacon of insight and understanding that helps you gauge the strength and compatibility of your 
  relationships. Whether you're embarking on a new romance or nurturing a long-term partnership, our Love Meter provides personalized assessments 
  to illuminate the dynamics at play and guide you towards deeper connection and fulfillment. Driven by a passion for helping hearts unite, our team 
  at From The Heart is dedicated to providing you with accurate, insightful, and compassionate guidance on matters of love and relationships. We
@@ -32,27 +32,30 @@
 <center><h2> 
 
  THE TEAM</h2></center>
-<h3> Meet the heart-centered individuals who power our Love Meter and guide you on your journey through the realms of romance :
- 💝 Jelita Lusia as The Web Developer
+<h3> Meet the heart-centered individuals who power our Love Meter and guide you on your journey through the realms of romance :</h3>
+<h3> 💝 Jelita Lusia as The Web Developer</h3><h3>
  A web developer is a programmer who develops World Wide Web applications using a client–server model. The applications typically use HTML, CSS, 
  and JavaScript in the client, and any general-purpose programming language in the server. HTTP is used for communications between client and 
  server. A web developer may specialize in client-side applications (Front-end web development), server-side applications (back-end 
  development), or both (full-stack development)</h3><p1>
  <a href="https://en.m.wikipedia.org/wiki/Web_developer">source : https://en.m.wikipedia.org/wiki/Web_developer</p1></a>
-<h3> 💝 Jessica Rachel as The App Developer
+ 
+<h3> 💝 Jessica Rachel as The App Developer</h3><h3>
  An application developer is a software engineer who designs, creates, tests, programs and updates applications for a particular device like 
  mobile or web or a specific operating system. Application developers typically specialise in one area of development, like a mobile phone 
  application. They are also involved in performing regular updates on applications and releasing the latest update to the end-users.</h3><p1>
  <a href="https://in.indeed.com/career-advice/finding-a-job/what-is-an-application-developer#:~:text=An%20application%20developer%20is%20a,like%" target="_blank">source : https://in.indeed.com/career-advice/finding-a-job/what-is-an-application-developer#:~:text=An%20application%20developer%20is%20a,like%
  20a%20mobile%20phone%20application.</p1></a>
-<h3> 💝 Carina Yosephine as The Content Writer
+ 
+<h3> 💝 Carina Yosephine as The Content Writer</h3><h3>
  A Website content writer or web content writer is a person who specializes in providing content for websites. Every website has a specific 
  target audience and requires the most relevant content to attract business. Content should contain keywords (specific business-related terms, 
  which internet users might use in order to search for services or products) aimed towards improving a website's SEO. A website content writer 
- who also has knowledge of the SEO process is referred to as an SEO Content Writer.</h3><p1>
- <a href="https://en.m.wikipedia.org/wiki/Website_content_writer#:~:text=A%20Website%20content%20writer%20or,relevant%20content%20to%20attract%20business>source : https://en.m.wikipedia.org/wiki/Website_content_writer#:~:text=A%20Website%20content%20writer%20or,relevant%20content%20to%20
- attract%20business.</p1></a>
-<h3> 💝 Elisabeth Anju as The Graphic Designer
+ who also has knowledge of the SEO process is referred to as an SEO Content Writer.</h3>
+ <p1><a href="https://en.m.wikipedia.org/wiki/Website_content_writer#:~:text=A%20Website%20content%20writer%20or,relevant%20content%20to%20attract%20business>source : https://en.m.wikipedia.org/wiki/Website_content_writer#:~:text=A%20Website%20content%20writer%20or,relevant%20content%20to%20
+ attract%20business.</a></p1>
+      
+ <h3> 💝 Elisabeth Anju as The Graphic Designer </h3><h3>
  A graphic designer is a professional who practices the discipline of graphic design, either within companies or organizations or independently. 
  They are professionals in design and visual communication, with their primary focus on transforming linguistic messages into graphic 
  manifestations, whether tangible or intangible. They are responsible for planning, designing, projecting, and conveying messages or ideas 
