--- a/index.html
+++ b/index.html
@@ -44,16 +44,14 @@
  An application developer is a software engineer who designs, creates, tests, programs and updates applications for a particular device like 
  mobile or web or a specific operating system. Application developers typically specialise in one area of development, like a mobile phone 
  application. They are also involved in performing regular updates on applications and releasing the latest update to the end-users.</h3><p1>
- <a href="https://in.indeed.com/career-advice/finding-a-job/what-is-an-application-developer#:~:text=An%20application%20developer%20is%20a,like%" target="_blank">source : https://in.indeed.com/career-advice/finding-a-job/what-is-an-application-developer#:~:text=An%20application%20developer%20is%20a,like%
- 20a%20mobile%20phone%20application.</p1></a>
+ <a href="https://in.indeed.com/career-advice/finding-a-job/what-is-an-application-developer#:~:text=An%20application%20developer%20is%20a,like%" target="_blank">source : https://in.indeed.com/what-is-an-application-developer.
  
 <h3 class="big"> 💝 Carina Yosephine as The Content Writer</h3><h3>
  A Website content writer or web content writer is a person who specializes in providing content for websites. Every website has a specific 
  target audience and requires the most relevant content to attract business. Content should contain keywords (specific business-related terms, 
  which internet users might use in order to search for services or products) aimed towards improving a website's SEO. A website content writer 
  who also has knowledge of the SEO process is referred to as an SEO Content Writer.</h3>
- <p1><a href="https://en.m.wikipedia.org/wiki/Website_content_writer#:~:text=A%20Website%20content%20writer%20or,relevant%20content%20to%20attract%20business:">source : https://en.m.wikipedia.org/wiki/Website_content_writer#:~:text=A%20Website%20content%20writer%20or,relevant%20content%20to%20
- attract%20business.</a></p1>
+ <p1><a href="https://en.m.wikipedia.org/wiki/Website_content_writer#:~:text=A%20Website%20content%20writer%20or,relevant%20content%20to%20attract%20business:">source : https://en.m.wikipedia.org/wiki/Website_content_writter.</a></p1>
  
 <h3 class="big">💝 Elisabeth Anju as The Graphic Designer </h3><h3>
  A graphic designer is a professional who practices the discipline of graphic design, either within companies or organizations or independently. 
