--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  An application developer is a software engineer who designs, creates, tests, programs and updates applications for a particular device like 
  mobile or web or a specific operating system. Application developers typically specialise in one area of development, like a mobile phone 
  application. They are also involved in performing regular updates on applications and releasing the latest update to the end-users.</h3><p1>
- <a href="https://in.indeed.com/career-advice/finding-a-job/what-is-an-application-developer#:~:text=An%20application%20developer%20is%20a,like%" target="_blank">source : https://in.indeed.com/what-is-an-application-developer.
+ <a href="https://in.indeed.com/career-advice/finding-a-job/what-is-an-application-developer#:~:text=An%20application%20developer%20is%20a,like%" target="_blank">source : https://in.indeed.com/what-is-an-application-developer.</a></p1>
  
 <h3 class="big"> 💝 Carina Yosephine as The Content Writer</h3><h3>
  A Website content writer or web content writer is a person who specializes in providing content for websites. Every website has a specific 
