--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  and JavaScript in the client, and any general-purpose programming language in the server. HTTP is used for communications between client and 
  server. A web developer may specialize in client-side applications (Front-end web development), server-side applications (back-end 
  development), or both (full-stack development)</h3><p1>
- <a href="https://en.m.wikipedia.org/wiki/Web_developer">source : https://en.m.wikipedia.org/wiki/Web_developer</p1></a>
+ <a href="https://en.m.wikipedia.org/wiki/Web_developer">source : https://en.m.wikipedia.org-wiki-Web_developer</p1></a>
  
 <h3 class="big"> 💝 Jessica Rachel as The App Developer</h3><h3>
  An application developer is a software engineer who designs, creates, tests, programs and updates applications for a particular device like 
@@ -51,7 +51,7 @@
  target audience and requires the most relevant content to attract business. Content should contain keywords (specific business-related terms, 
  which internet users might use in order to search for services or products) aimed towards improving a website's SEO. A website content writer 
  who also has knowledge of the SEO process is referred to as an SEO Content Writer.</h3>
- <p1><a href="https://en.m.wikipedia.org/wiki/Website_content_writer#:~:text=A%20Website%20content%20writer%20or,relevant%20content%20to%20attract%20business:">source : https://en.m.wikipedia.org/wiki/Website_content_writter.</a></p1>
+ <p1><a href="https://en.m.wikipedia.org/wiki/Website_content_writer#:~:text=A%20Website%20content%20writer%20or,relevant%20content%20to%20attract%20business:">source : https://en.m.wikipedia.org-/wiki/Website_content_writter.</a></p1>
  
 <h3 class="big">💝 Elisabeth Anju as The Graphic Designer </h3><h3>
  A graphic designer is a professional who practices the discipline of graphic design, either within companies or organizations or independently. 
@@ -59,7 +59,7 @@
  manifestations, whether tangible or intangible. They are responsible for planning, designing, projecting, and conveying messages or ideas 
  through visual communicatio</h3>
   
- <p1><a href="https://en.m.wikipedia.org/wiki/Graphic_designer">source : https://en.m.wikipedia.org/wiki/Graphic_designer</p1></a>
+ <p1><a href="https://en.m.wikipedia.org/wiki/Graphic_designer">source : https://en.m.wikipedia.org-wiki-Graphic_designer</p1></a>
 <h3> Together, Jelita, Jessica, Carina, and Anju form the beating heart of From The Heart, united in their mission to help you navigate the twists 
  and turns of love with grace, wisdom, and compassion. Trust in our team to light up your path to love and happiness, one heartbeat at a time.
 </h3>
