--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </ul>
 </nav>
 
+<h1 class=love>💝</h1>
 <center><h3>   Welcome to From The Heart, your trusted destination for exploring the depths of love through our unique Love Meter. At From The Heart, we believe 
  that love is a universal language that transcends boundaries and connects souls in profound ways.</h3>   
  
