--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>From The Heart</title>
 <link rel="stylesheet" href="styles.css">
+<link rel="icon" type="image/x-icon" href="pic3.png">
 </head>
 <body>
 <center><img src="pic3.png" style="width:50%;"></center>
