--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </ul>
 </nav>
 
-<marquee><h1 class=love>˚˖𓍢ִ໋🌷͙֒✧🩷˚.🎀༘⋆(づ๑•ᴗ•๑)づ♡</h1>></marquee>
+<h1 class=love><marquee>˚˖𓍢ִ໋🌷͙֒✧🩷˚.🎀༘⋆(づ๑•ᴗ•๑)づ♡</marquee></h1>
 <center><h3>   Welcome to From The Heart, your trusted destination for exploring the depths of love through our unique Love Meter. At From The Heart, we believe 
  that love is a universal language that transcends boundaries and connects souls in profound ways.</h3>   
  
