--- a/aboutus.html
+++ b/aboutus.html
@@ -15,6 +15,8 @@
 <li><a href="aboutus.html">About Us</a></li>
 </ul>
 </nav>
+
+<h1 class=love><marquee>⋆˚࿔ our team 𝜗𝜚˚⋆</marquee></h1>
 <pre>
 <center>
 <img src="jelita.png" style="width:25%;">
