--- a/Desainproses.html
+++ b/Desainproses.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>From The Heart</title>
 <link rel="stylesheet" href="styles.css">
+<link rel="icon" type="image/x-icon" href="pic3.png">
 </head>
 <body>
 <center><img src="pic3.png" style="width:50%;"></center>
@@ -15,6 +16,8 @@
 <li><a href="aboutus.html">About Us</a></li>
 </ul>
 </nav>
+
+<h1 class=love><marquee>˚˖𓍢ִ໋🌷͙֒✧🩷˚.🎀༘⋆(づ๑•ᴗ•๑)づ♡</marquee></h1>
 
  
 <center><div style="position: relative; width: 50%; height: 0; padding-top: 30%;
