--- a/aboutus.html
+++ b/aboutus.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>From The Heart</title>
 <link rel="stylesheet" href="styles.css">
+<link rel="icon" type="image/x-icon" href="pic3.png">
 </head>
 <body>
 <center><img src="pic3.png" style="width:50%;"></center>
@@ -16,7 +17,7 @@
 </ul>
 </nav>
 
-<h1 class=love><marquee>⋆˚࿔ our team 𝜗𝜚˚⋆</marquee></h1>
+<h1 class=love><marquee>˚˖𓍢ִ໋🌷͙֒✧🩷˚.🎀༘⋆(づ๑•ᴗ•๑)づ♡</marquee></h1>
 <pre>
 <center>
 <img src="jelita.png" style="width:25%;">
