--- a/product.html
+++ b/product.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>From The Heart</title>
 <link rel="stylesheet" href="styles.css">
+<link rel="icon" type="image/x-icon" href="pic3.png">
 </head>
 <body>
 <center><img src="pic3.png" style="width:50%;"></center>
@@ -15,6 +16,8 @@
 <li><a href="aboutus.html">About Us</a></li>
 </ul>
 </nav>
+
+<h1 class=love><marquee>˚˖𓍢ִ໋🌷͙֒✧🩷˚.🎀༘⋆(づ๑•ᴗ•๑)づ♡</marquee></h1>
 
 
 <center><iframe src="https://scratch.mit.edu/projects/1027501291/embed" allowtransparency="true" width="100%" height="402px" frameborder="0" scrolling="no" allowfullscreen></iframe></center>
