--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
 </ul>
 </nav>
 
-<h1 class=love><marquee>˚˖𓍢ִ໋🌷͙֒✧🩷˚.🎀༘⋆(づ๑•ᴗ•๑)づ♡</marquee></h1>
+<h1 class=love>⋆˚࿔ our team 𝜗𝜚˚⋆</h1>
 <pre>
 <center>
 <img src="jelita.png" style="width:25%;">
