--- a/product.html
+++ b/product.html
@@ -20,7 +20,7 @@
 
 
 <center><iframe src="https://scratch.mit.edu/projects/1027501291/embed" allowtransparency="true" width="100%" height="402px" frameborder="0" scrolling="no" allowfullscreen></iframe></center>
-<center><p1> Click The ribbon!</p1></center>
+<center><p1> Click This ribbon!!</p1></center>
 <center><a href="https://scratch.mit.edu/projects/1027501291/fullscreen/"><img src="rib.jpg" style="width:320px;height:320px;" left: 10px></a></center>
 
 <pre>
