--- a/product.html
+++ b/product.html
@@ -23,28 +23,28 @@
 <center><p1> Click This ribbon!!</p1></center>
 <center><a href="https://scratch.mit.edu/projects/1027501291/fullscreen/"><img src="rib.jpg" style="width:320px;height:320px;" left: 10px></a></center>
 
-<pre>
-<center><h3> Instructions :
-1. Click the green flag button
-2. ⁠Enter the name for Person 1
-3. ⁠Click Check Button
-4. ⁠Enter the name for Person 2
-5. ⁠Click Check Button
 
-1. Tekan tombol bendera hijau
-2. ⁠Masukkan nama orang pertama
-3. ⁠Tekan tombol checklist
-4. ⁠Masukkan nama orang kedua
-5. ⁠Tekan tombol checklist
+<center><h3> Instructions :</h3>
+<h3>1. Click the green flag button</h3>
+<h3>2. ⁠Enter the name for Person 1</h3>
+<h3>3. ⁠Click Check Button</h3>
+<h3>4. ⁠Enter the name for Person 2</h3>
+<h3>5. ⁠Click Check Button</h3>
+<h3>            <h/3>
+<h3>1. Tekan tombol bendera hijau</h3>
+<h3>2. ⁠Masukkan nama orang pertama</h3>
+<h3>3. ⁠Tekan tombol checklist</h3>
+<h3>4. ⁠Masukkan nama orang kedua</h3>
+<h3>5. ⁠Tekan tombol checklist</h3>
 
-0 = No Relation
-? = Labile
-🩷 = In A Relationship
-💎 = Getting Married
+<h3>0 = No Relation</h3>
+<h3>? = Labile</h3>
+<h3>🩷 = In A Relationship</h3>
+<h3>💎 = Getting Married</h3>
 
-0 = Tidak ada hubungan
-? = Labil
-🩷 = Dalam suatu hubungan
-💎 = Akan segera menikah </h3></center>
+<h3>0 = Tidak ada hubungan</h3>
+<h3>? = Labil</h3>
+<h3>🩷 = Dalam suatu hubungan</h3>
+<h3>💎 = Akan segera menikah </h3></center>
 </body>
 </html>
